crates/keron-lang/tests/corpus/errors/check/secret_map_key.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `Secret` is not a valid `Map` key type; allowed keys are `String` and `Int`
  --> 2:12
  |
2 | val cache: Map<Secret, String> = {token: "cached"}
  |            ^^^^^^^^^^^^^^^^^^^^
